force-app/main/default/objects/RTV_Order_Inspection__c/RTV_Order_Inspection__c.object-meta.xml
<CustomObject>
    <label>RTV Order Inspection</label>
    <nameField>
        <displayFormat>INSP{0000000000}</displayFormat>
        <label>Inspect Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTV Order Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>