force-app/main/default/objects/RTV_Order_Inspection__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <defaultValue>0</defaultValue>
    <description>None</description>
    <inlineHelpText>None</inlineHelpText>
    <label>A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>