force-app/main/default/objects/RTV_Order_Inspection__c/fields/Application_QTY_B2_1__c.field-meta.xml
<CustomField>
    <fullName>Application_QTY_B2_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Application QTY B2-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>