force-app/main/default/objects/RTV_Order_Inspection__c/fields/Application_QTY_No_ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>Application_QTY_No_ReasonCode__c</fullName>
    <defaultValue>0</defaultValue>
    <description>质检报告中无ReasonCode的商品申请数量</description>
    <label>Application QTY No ReasonCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>