force-app/main/default/objects/RTV_Order_Inspection__c/fields/B1__c.field-meta.xml
<CustomField>
    <fullName>B1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>APP无包装,Plastic Bag</description>
    <inlineHelpText>APP无包装,Plastic Bag</inlineHelpText>
    <label>B1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>