force-app/main/default/objects/RTV_Order_Inspection__c/fields/B2_1__c.field-meta.xml
<CustomField>
    <fullName>B2_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>无吊牌</description>
    <inlineHelpText>无吊牌</inlineHelpText>
    <label>B2-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>