force-app/main/default/objects/RTV_Order_Inspection__c/fields/B2__c.field-meta.xml
<CustomField>
    <fullName>B2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>有价格标</description>
    <inlineHelpText>有价格标</inlineHelpText>
    <label>B2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>