force-app/main/default/objects/RTV_Order_Inspection__c/fields/B3__c.field-meta.xml
<CustomField>
    <fullName>B3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>去除脏</description>
    <inlineHelpText>去除脏</inlineHelpText>
    <label>B3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>