force-app/main/default/objects/RTV_Order_Inspection__c/fields/C1__c.field-meta.xml
<CustomField>
    <fullName>C1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>不在退货范围内</description>
    <inlineHelpText>不在退货范围内</inlineHelpText>
    <label>C1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>