force-app/main/default/objects/RTV_Order_Inspection__c/fields/C1_Desc__c.field-meta.xml
<CustomField>
    <fullName>C1_Desc__c</fullName>
    <formula>IF(
ISNULL(RTV_Order_Item__r.RTV_Order__r.Insp_CS_Approve_Time__c) &amp;&amp;
(
$Profile.Name = &apos;RMS WSL HQ&apos; ||
$Profile.Name = &apos;RMS WSL Reg Branch&apos; ||
$Profile.Name = &apos;RMS WSL Sold To&apos; ||
$Profile.Name = &apos;RMS WSL Ship To&apos; ||
$Profile.Name = &apos;RMS WSL Ship To -Only DEF&apos; 
),
&apos;&apos;,
TEXT( C1__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C1 Desc</label>
    <type>Text</type>
</CustomField>