force-app/main/default/objects/RTV_Order_Inspection__c/fields/C2_1__c.field-meta.xml
<CustomField>
    <fullName>C2_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>试穿破损(APP/ACC)</description>
    <inlineHelpText>试穿破损(APP/ACC)</inlineHelpText>
    <label>C2-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>