force-app/main/default/objects/RTV_Order_Inspection__c/fields/C2_2__c.field-meta.xml
<CustomField>
    <fullName>C2_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>试穿脏污(APP/ACC)</description>
    <inlineHelpText>试穿脏污(APP/ACC)</inlineHelpText>
    <label>C2-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>