force-app/main/default/objects/RTV_Order_Inspection__c/fields/C2_3__c.field-meta.xml
<CustomField>
    <fullName>C2_3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>试穿鞋（鞋底）</description>
    <inlineHelpText>试穿鞋（鞋底）</inlineHelpText>
    <label>C2-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>