force-app/main/default/objects/RTV_Order_Inspection__c/fields/C2_6_1__c.field-meta.xml
<CustomField>
    <fullName>C2_6_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>单脚发黄</description>
    <inlineHelpText>单脚发黄</inlineHelpText>
    <label>C2-6-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>