force-app/main/default/objects/RTV_Order_Inspection__c/fields/C__c.field-meta.xml
<CustomField>
    <fullName>C__c</fullName>
    <description>Inspection QTY of SKU level C</description>
    <formula>C1__c +  C2_1__c + C2_2__c + C2_3__c + C2_4__c + C2_5__c + C2_6__c + C2_6_1__c + C2_7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Inspection QTY of SKU level B</inlineHelpText>
    <label>C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>