force-app/main/default/objects/RTV_Order_Inspection__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <defaultValue>0</defaultValue>
    <description>残次品</description>
    <inlineHelpText>残次品</inlineHelpText>
    <label>D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>