force-app/main/default/objects/RTV_Order_Inspection__c/fields/Delivery_QTY__c.field-meta.xml
<CustomField>
    <fullName>Delivery_QTY__c</fullName>
    <formula>Delivery_QTY_A__c +
Delivery_QTY_B__c +
Delivery_QTY_C__c +
Delivery_QTY_D__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>