force-app/main/default/objects/RTV_Order_Inspection__c/fields/Delivery_QTY_C__c.field-meta.xml
<CustomField>
    <fullName>Delivery_QTY_C__c</fullName>
    <formula>Delivery_QTY_C1__c +
Delivery_QTY_C2_1__c +
Delivery_QTY_C2_2__c +
Delivery_QTY_C2_3__c +
Delivery_QTY_C2_4__c +
Delivery_QTY_C2_5__c +
Delivery_QTY_C2_6__c +
Delivery_QTY_C2_6_1__c +
Delivery_QTY_C2_7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery QTY (C)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>