force-app/main/default/objects/RTV_Order_Inspection__c/fields/Delivery_QTY_D__c.field-meta.xml
<CustomField>
    <fullName>Delivery_QTY_D__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delivery QTY D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>