force-app/main/default/objects/RTV_Order_Inspection__c/fields/Desc_A__c.field-meta.xml
<CustomField>
    <fullName>Desc_A__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desc A</label>
    <type>Text</type>
</CustomField>