force-app/main/default/objects/RTV_Order_Inspection__c/fields/Desc_C__c.field-meta.xml
<CustomField>
    <fullName>Desc_C__c</fullName>
    <formula>IF(
 ISNULL(RTV_Order_Item__r.RTV_Order__r.Insp_CS_Approve_Time__c) &amp;&amp;
 (
  $Profile.Name = &apos;RMS WSL HQ&apos; ||
  $Profile.Name = &apos;RMS WSL Reg Branch&apos; ||
  $Profile.Name = &apos;RMS WSL Sold To&apos; ||
  $Profile.Name = &apos;RMS WSL Ship To&apos; ||
  $Profile.Name = &apos;RMS WSL Ship To -Only DEF&apos; 
 ),
 &apos;&apos;,
 (
  IF(C1__c &gt; 0, &apos;不在退货范围内 *&apos; + TEXT(C1__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_1__c &gt; 0, &apos;试穿破损(APP/ACC) *&apos; + TEXT(C2_1__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_2__c &gt; 0, &apos;试穿脏污(APP/ACC) *&apos; + TEXT(C2_2__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_3__c &gt; 0, &apos;试穿鞋（鞋底） *&apos; + TEXT(C2_3__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_4__c &gt; 0, &apos;脏污（鞋面） *&apos; + TEXT(C2_4__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_5__c &gt; 0, &apos;脏污（侧边鞋头） *&apos; + TEXT(C2_5__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_6__c &gt; 0, &apos;发黄 *&apos; + TEXT(C2_6__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_6_1__c &gt; 0,&apos;单脚发黄 *&apos; + TEXT(C2_6_1__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_7__c &gt; 0, &apos;其它（描述具体拒收原因，如单只鞋。左右脚尺码不一） *&apos; + TEXT(C2_7__c) + &apos;; &apos;, &apos;&apos;)
 )
)</formula>
    <label>Desc C</label>
    <type>Text</type>
</CustomField>