force-app/main/default/objects/RTV_Order_Inspection__c/fields/Diff_QTY__c.field-meta.xml
<CustomField>
    <fullName>Diff_QTY__c</fullName>
    <description>差异数量（有多条的话相加）</description>
    <formula>Diff_QTY_A__c + Diff_QTY_B1__c + Diff_QTY_B2__c + Diff_QTY_B2_1__c +Diff_QTY_B3__c+Diff_QTY_B4__c+Diff_QTY_B5__c+Diff_QTY_B6__c+Diff_QTY_B7__c+ Diff_QTY_C1__c + Diff_QTY_C2_1__c + Diff_QTY_C2_2__c + Diff_QTY_C2_3__c + Diff_QTY_C2_4__c + Diff_QTY_C2_5__c + Diff_QTY_C2_6__c + Diff_QTY_C2_6_1__c + Diff_QTY_C2_7__c + Diff_QTY_D__c+ Diff_QTY_No_ReasonCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>