force-app/main/default/objects/RTV_Order_Inspection__c/fields/Diff_QTY_B1__c.field-meta.xml
<CustomField>
    <fullName>Diff_QTY_B1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Diff QTY B1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>