force-app/main/default/objects/RTV_Order_Inspection__c/fields/Diff_QTY_C2_6_1__c.field-meta.xml
<CustomField>
    <fullName>Diff_QTY_C2_6_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Diff QTY C2-6-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>