force-app/main/default/objects/RTV_Order_Inspection__c/fields/Diff_QTY_No_ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>Diff_QTY_No_ReasonCode__c</fullName>
    <defaultValue>0</defaultValue>
    <description>质检报告中没有填写ReasonCode时的差异数量</description>
    <label>Diff QTY No ReasonCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>