force-app/main/default/objects/RTV_Order_Inspection__c/fields/Reason_C__c.field-meta.xml
<CustomField>
    <fullName>Reason_C__c</fullName>
    <formula>IF(
 ISNULL(RTV_Order_Item__r.RTV_Order__r.Insp_CS_Approve_Time__c) &amp;&amp;
 (
  $Profile.Name = &apos;RMS WSL HQ&apos; ||
  $Profile.Name = &apos;RMS WSL Reg Branch&apos; ||
  $Profile.Name = &apos;RMS WSL Sold To&apos; ||
  $Profile.Name = &apos;RMS WSL Ship To&apos; ||
  $Profile.Name = &apos;RMS WSL Ship To -Only DEF&apos; 
 ),
 &apos;&apos;,
 (
  IF(C1__c &gt; 0, &apos;C1*&apos; + TEXT(C1__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_1__c &gt; 0, &apos;C2-1*&apos; + TEXT(C2_1__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_2__c &gt; 0, &apos;C2-2*&apos; + TEXT(C2_2__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_3__c &gt; 0, &apos;C2-3*&apos; + TEXT(C2_3__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_4__c &gt; 0, &apos;C2-4*&apos; + TEXT(C2_4__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_5__c &gt; 0, &apos;C2-5*&apos; + TEXT(C2_5__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_6__c &gt; 0, &apos;C2-6*&apos; + TEXT(C2_6__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_6_1__c &gt; 0,&apos;C2-6-1*&apos; + TEXT(C2_6_1__c) + &apos;; &apos;, &apos;&apos;) +
  IF(C2_7__c &gt; 0, &apos;C2-7*&apos; + TEXT(C2_7__c) + &apos;; &apos;, &apos;&apos;)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason C</label>
    <type>Text</type>
</CustomField>