force-app/main/default/objects/RTV_Order_Inspection__c/fields/Reason_D__c.field-meta.xml
<CustomField>
    <fullName>Reason_D__c</fullName>
    <formula>IF(
 ISNULL(RTV_Order_Item__r.RTV_Order__r.Insp_CS_Approve_Time__c) &amp;&amp;
 (
  $Profile.Name = &apos;RMS WSL HQ&apos; ||
  $Profile.Name = &apos;RMS WSL Reg Branch&apos; ||
  $Profile.Name = &apos;RMS WSL Sold To&apos; ||
  $Profile.Name = &apos;RMS WSL Ship To&apos; ||
  $Profile.Name = &apos;RMS WSL Ship To -Only DEF&apos; 
 ),
 &apos;&apos;,
 IF(D__c &gt; 0, &apos;D*&apos; + TEXT(D__c) + &apos;; &apos;, &apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason D</label>
    <type>Text</type>
</CustomField>