force-app/main/default/objects/RTV_Order_Inspection__c/fields/RTV_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>RTV_Order_Item__c</fullName>
    <description>关联Return Order Item</description>
    <label>RTV Order Item</label>
    <referenceTo>RTV_Order_Item__c</referenceTo>
    <relationshipLabel>Inspection Details</relationshipLabel>
    <relationshipName>RTV_Order_Inspections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>